--- a/index.html
+++ b/index.html
@@ -612,7 +612,14 @@
                         <a href="#" class="btn btn-gradient"><span>Заказать приложение</span></a>
                     </div>
                 </div>
-                <div class="application-design-image"><img src="assets/images/app-image.png" alt="image application design" /></div>
+                <div class="application-design-image">
+                    <div class="design-image-wrap design-image-6"><img src="assets/images/top-screen-6.svg" alt="image application design" /></div>
+                    <div class="design-image-wrap design-image-5"><img src="assets/images/top-screen-5.svg" alt="image application design" /></div>
+                    <div class="design-image-wrap design-image-4"><img src="assets/images/top-screen-4.svg" alt="image application design" /></div>
+                    <div class="design-image-wrap design-image-3"><img src="assets/images/top-screen-3.svg" alt="image application design" /></div>
+                    <div class="design-image-wrap design-image-2"><img src="assets/images/top-screen-2.svg" alt="image application design" /></div>
+                    <div class="design-image-wrap design-image-1"><img src="assets/images/top-screen-1.svg" alt="image application design" /></div>
+                </div>
             </section>
             <section class="what-do-you-get-section content">
                 <div class="what-do-you-get-item">
