--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@
         </div>
     </div>
 </header>
+
     <div class="container">
         <div class="wrapper main">
             <section class="application-design-wrap content">
@@ -701,7 +702,7 @@
                                         <div class="section-title">Pizza Verona</div>
                                         <div class="item-text">Verona круглосуточно доставляет суши и пиццу в Архангельске и Северодвинске. Мы сделали приложение с помощью нашего модуля MobileShop и доработали меню с категориями еды.</div>
                                     </div>
-                                    <div class="application-info-content">
+                                    <div class="application-info-content desktop">
                                         <div class="new-label"><img src="assets/images/new-label.svg" alt="new label icon" /></div>
                                         <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
                                     </div>
@@ -713,7 +714,7 @@
                                         <div class="section-title">B.T.C Man</div>
                                         <div class="item-text">Verona круглосуточно доставляет суши и пиццу в Архангельске и Северодвинске. Мы сделали приложение с помощью нашего модуля MobileShop и доработали меню с категориями еды.</div>
                                     </div>
-                                    <div class="application-info-content">
+                                    <div class="application-info-content desktop">
                                         <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
                                     </div>
                                 </div>
@@ -724,7 +725,7 @@
                                         <div class="section-title">GetFaster</div>
                                         <div class="item-text">Verona круглосуточно доставляет суши и пиццу в Архангельске и Северодвинске. Мы сделали приложение с помощью нашего модуля MobileShop и доработали меню с категориями еды.</div>
                                     </div>
-                                    <div class="application-info-content">
+                                    <div class="application-info-content desktop">
                                         <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
                                     </div>
                                 </div>
@@ -735,7 +736,7 @@
                                         <div class="section-title">Харакири</div>
                                         <div class="item-text">Verona круглосуточно доставляет суши и пиццу в Архангельске и Северодвинске. Мы сделали приложение с помощью нашего модуля MobileShop и доработали меню с категориями еды.</div>
                                     </div>
-                                    <div class="application-info-content">
+                                    <div class="application-info-content desktop">
                                         <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
                                     </div>
                                 </div>
@@ -746,7 +747,7 @@
                                         <div class="section-title">Мед Торг 21</div>
                                         <div class="item-text">Verona круглосуточно доставляет суши и пиццу в Архангельске и Северодвинске. Мы сделали приложение с помощью нашего модуля MobileShop и доработали меню с категориями еды.</div>
                                     </div>
-                                    <div class="application-info-content">
+                                    <div class="application-info-content desktop">
                                         <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
                                     </div>
                                 </div>
@@ -757,7 +758,7 @@
                                         <div class="section-title">Огненная земля</div>
                                         <div class="item-text">Verona круглосуточно доставляет суши и пиццу в Архангельске и Северодвинске. Мы сделали приложение с помощью нашего модуля MobileShop и доработали меню с категориями еды.</div>
                                     </div>
-                                    <div class="application-info-content">
+                                    <div class="application-info-content desktop">
                                         <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
                                     </div>
                                 </div>
@@ -842,13 +843,19 @@
 
                         <div class="right-menu-wrap">
                             <div data-id="0" class="application-description-wrap app-content-js">
+                                <div class="application-info-content mobile">
+                                    <div class="new-label"><img src="assets/images/new-label.svg" alt="new label icon" /></div>
+                                    <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
+                                </div>
                                 <div data-id="0" class="application-description app-desc-js">
                                     <div class="item-title">Экран загрузки</div>
                                     <div class="item-text">Состоит из логотипа магазина (загружается при сборке приложения) и полосы загрузки. Полосе загрузки при сборке можно задать цвет и размер</div>
                                 </div>
                                 <div data-id="1" class="application-description app-desc-js">
-                                    <div class="item-title">главная</div>
-                                    <div class="item-text">Состоит из логотипа магазина (загружается при сборке приложения) и полосы загрузки. Полосе загрузки при сборке можно задать цвет и размер</div>
+                                    <div class="item-content">
+                                        <a href="#"><img src="assets/images/googleStore.jpg" alt="app logo" /></a>
+                                        <a href="#"><img src="assets/images/appStore.jpg" alt="app logo" /></a>
+                                    </div>
                                 </div>
                                 <div data-id="2" class="application-description app-desc-js">
                                     <div class="item-title">Экран авторизации</div>
@@ -864,6 +871,9 @@
                                 </div>
                             </div>
                             <div data-id="1" class="application-description-wrap app-content-js">
+                                <div class="application-info-content mobile">
+                                    <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
+                                </div>
                                 <div data-id="0" class="application-description app-desc-js">
                                     <div class="item-title">Экран загрузки</div>
                                     <div class="item-text">Состоит из логотипа магазина (загружается при сборке приложения) и полосы загрузки. Полосе загрузки при сборке можно задать цвет и размер</div>
@@ -886,6 +896,9 @@
                                 </div>
                             </div>
                             <div data-id="2" class="application-description-wrap app-content-js">
+                                <div class="application-info-content mobile">
+                                    <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
+                                </div>
                                 <div data-id="0" class="application-description app-desc-js">
                                     <div class="item-title">Экран загрузки</div>
                                     <div class="item-text">Состоит из логотипа магазина (загружается при сборке приложения) и полосы загрузки. Полосе загрузки при сборке можно задать цвет и размер</div>
@@ -908,6 +921,9 @@
                                 </div>
                             </div>
                             <div data-id="3" class="application-description-wrap app-content-js">
+                                <div class="application-info-content mobile">
+                                    <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
+                                </div>
                                 <div data-id="0" class="application-description app-desc-js">
                                     <div class="item-title">Экран загрузки</div>
                                     <div class="item-text">Состоит из логотипа магазина (загружается при сборке приложения) и полосы загрузки. Полосе загрузки при сборке можно задать цвет и размер</div>
@@ -930,6 +946,9 @@
                                 </div>
                             </div>
                             <div data-id="4" class="application-description-wrap app-content-js">
+                                <div class="application-info-content mobile">
+                                    <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
+                                </div>
                                 <div data-id="0" class="application-description app-desc-js">
                                     <div class="item-title">Экран загрузки</div>
                                     <div class="item-text">Состоит из логотипа магазина (загружается при сборке приложения) и полосы загрузки. Полосе загрузки при сборке можно задать цвет и размер</div>
@@ -952,6 +971,9 @@
                                 </div>
                             </div>
                             <div data-id="5" class="application-description app-content-js">
+                                <div class="application-info-content mobile">
+                                    <a href="" class="application-info-link">Детальное описание возможностей шаблона и опций <img src="assets/images/link-icon.svg" alt="app logo" /></a>
+                                </div>
                                 <div data-id="0" class="application-description app-desc-js">
                                     <div class="item-title">Экран загрузки</div>
                                     <div class="item-text">Состоит из логотипа магазина (загружается при сборке приложения) и полосы загрузки. Полосе загрузки при сборке можно задать цвет и размер</div>
@@ -1058,7 +1080,7 @@
                             <div class="packages-and-prices-item-helper">
                                 <div class="packages-and-prices-info">
                                     <h5 class="item-title">Приложение<br> для OpenCart</h5>
-                                    <div class="item-text">Интеграционное решение, которое синхронизирует товары, заказы, новости и другую информацию с мобильными приложениями. <span>Подробнее...</span></div>
+                                    <div class="item-text">Интеграционное решение, которое синхронизирует товары, заказы, новости и другую информацию с мобильными приложениями. <a href="/" >Подробнее...</a></div>
                                     <a href="/" class="marketplace-link">В маркетплейсе <img src="assets/images/marketplace-icon.svg" alt="marketplace icon" /></a>
                                 </div>
                                 <div class="prices-wrap">
@@ -1073,7 +1095,7 @@
                                     <h5 class="item-title">Приложение<br> для 1С-Битрикс</h5>
                                     <div class="item-text">Интеграционный модуль, который синхронизирует товары, заказы,
                                         новости и другую информацию с нативными или собранными на React native
-                                        мобильными приложениями. <span>Подробнее...</span></div>
+                                        мобильными приложениями. <a href="/" >Подробнее...</a></div>
                                     <a href="/" class="marketplace-link">В маркетплейсе <img
                                             src="assets/images/marketplace-icon.svg" alt="marketplace icon"/></a>
                                 </div>
@@ -1088,7 +1110,7 @@
                                 <div class="packages-and-prices-info">
                                     <h5 class="item-title">Приложение<br> для InSales</h5>
                                     <div class="item-text">Интеграция которая синхронизирует товары, заказы, новости и
-                                        другую информацию с нативными мобильными приложениями. <span>Подробнее...</span>
+                                        другую информацию с нативными мобильными приложениями. <a href="/" >Подробнее...</a>
                                     </div>
                                     <a href="/" class="marketplace-link">В маркетплейсе <img
                                             src="assets/images/marketplace-icon.svg" alt="marketplace icon"/></a>
@@ -1138,7 +1160,6 @@
         </div>
 
     </div>
-
 
     <div class="background-footer">
         <div id="footer" class="content">
